# polyapprox

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
polyapprox/: __init__.py
polyapprox/tests/: test_polyapprox.py
