[project]
name = "polyapprox"
version = "0.0.1.dev0"
dependencies = [
    "mpmath",
]
description = "Tools for creating polynomial and rational approximations of functions."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
  {name = 'Warren Weckesser', email = 'warren.weckesser+polyapprox@gmail.com'},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/WarrenWeckesser/polyapprox"
"Bug Tracker" = "https://github.com/WarrenWeckesser/polyapprox/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
